--- a/src/app/pages/home/sections/projects/projects.component.scss
+++ b/src/app/pages/home/sections/projects/projects.component.scss
@@ -423,11 +423,19 @@ $t-fast: 120ms;
   color: #3dcfb6;
 }
 
-.modal__img {
-  width: 90%;
+.modal__media {
+  width: 100%;
+  aspect-ratio: 16 / 9;
   border-radius: 18px;
-  display: block;
+  overflow: hidden;
   filter: drop-shadow(0 12px 50px rgba(0, 0, 0, 0.55));
+}
+
+.modal__img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
 }
 
 .modal__next {
@@ -472,10 +480,13 @@ $t-fast: 120ms;
     order: -1;
   }
 
-  .modal__img {
-    width: 100%;
+  .modal__media {
     border-radius: 16px;
     margin-bottom: 18px;
+  }
+
+  .modal__img {
+    border-radius: 0;
   }
 
   .modal__number {
