--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -1,25 +1,4 @@
 <section class="hero">
-  <!-- Marquee (Top - Mobile) -->
-  <div class="marquee marquee--top" aria-hidden="true">
-    <div class="marquee__track">
-      <div class="marquee__row marquee__row--reverse">
-        <div class="marquee__run">
-          <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
-        </div>
-
-        <div class="marquee__run" aria-hidden="true">
-          <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <div class="container hero__inner">
     <p class="hero__kicker">{{ 'hero.kicker' | t }}</p>
     <h1 class="hero__title">{{ 'hero.title' | t }}</h1>
@@ -60,9 +39,10 @@
   <div class="hero__right">
     <a href="mailto:dm@dimit.cc" class="email">dm&#64;dimit.cc</a>
     <div class="email--icon">
-    <a class="social email--icon" href="mailto:dm@dimit.cc" aria-label="Email">
-      <img class="social__icon social__icon--base" src="assets/icons/mail.svg" alt="" />
-    </a>
+      <a class="social email--icon" href="mailto:dm@dimit.cc" aria-label="Email">
+        <img class="social__icon social__icon--base" src="assets/icons/mail.svg" alt="" />
+        <img class="social__icon social__icon--hover" src="assets/icons/mail-1.svg" alt="" />
+      </a>
     </div>
 
 
@@ -88,34 +68,38 @@
     <div class="marquee__track">
 
       <div class="marquee__row">
-        <div class="marquee__run">
+        <div class="marquee__row-track">
+          <div class="marquee__run">
           <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
-        </div>
+          </div>
 
-        <div class="marquee__run" aria-hidden="true">
+          <div class="marquee__run" aria-hidden="true">
           <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+          </div>
         </div>
       </div>
 
       <div class="marquee__row marquee__row--reverse">
-        <div class="marquee__run">
+        <div class="marquee__row-track">
+          <div class="marquee__run">
           <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
-        </div>
+          </div>
 
-        <div class="marquee__run" aria-hidden="true">
+          <div class="marquee__run" aria-hidden="true">
           <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
           <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+          </div>
         </div>
       </div>
 
