--- a/src/app/pages/home/sections/projects/projects.component.scss
+++ b/src/app/pages/home/sections/projects/projects.component.scss
@@ -9,6 +9,18 @@ $t-fast: 120ms;
   padding: 120px 0 80px;
 }
 
+@media (min-width: 900px) and (max-width: 1100px) {
+  .projects-section {
+    padding: 0px 0 0px;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1350px) and (max-height: 700px) {
+  .projects-section {
+    padding: 0px 0 0px;
+  }
+}
+
 .section-header {
   margin-bottom: 64px;
 
