--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -70,17 +70,23 @@
       <div class="marquee__row">
         <div class="marquee__row-track">
           <div class="marquee__run">
-          <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.clean' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.freelance' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.webdev' | t }}</span><span class="dot">&bull;</span>
           </div>
 
           <div class="marquee__run" aria-hidden="true">
-          <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.clean' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.freelance' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.webdev' | t }}</span><span class="dot">&bull;</span>
           </div>
         </div>
       </div>
@@ -88,17 +94,23 @@
       <div class="marquee__row marquee__row--reverse">
         <div class="marquee__row-track">
           <div class="marquee__run">
-          <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.clean' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.freelance' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.webdev' | t }}</span><span class="dot">&bull;</span>
           </div>
 
           <div class="marquee__run" aria-hidden="true">
-          <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
-          <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.clean' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.freelance' | t }}</span><span class="dot">&bull;</span>
+            <span>{{ 'hero.marquee.webdev' | t }}</span><span class="dot">&bull;</span>
           </div>
         </div>
       </div>
