--- a/src/app/pages/home/sections/about/about.component.html
+++ b/src/app/pages/home/sections/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="container about__inner">
 
     <div class="about__image"
-         [@revealLeft]="inView ? 'visible' : 'hidden'">
+         [class.is-visible]="inView">
       <div class="about__image-wrap">
         <img src="assets/img/profil1.png"
              [alt]="'about.imageAlt' | t" />
@@ -10,7 +10,7 @@
     </div>
 
     <div class="about__content"
-         [@revealRight]="inView ? 'visible' : 'hidden'">
+         [class.is-visible]="inView">
       <div class="about__card">
         <span class="about__kicker">{{ 'about.kicker' | t }}</span>
         <h2 class="about__title">{{ 'about.title' | t }}</h2>
