--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -66,7 +66,7 @@
 /* CENTER */
 .footer__center {
   text-align: center;
-  color: #6dd3c6; // accent mint
+  color: #6dd3c6;
   font-size: 16px;
   grid-column: 1 / -1;
   margin-top: 8px;
